recursion.cons.min.Min.scala.error
Compilation error:
Min:5: error: '(' expected but identifier found.
  if record==null l.head
     ^