recursion.cons.min.Min.scala.code
var record: Int = null
def min(l:List[Int]): Int = {
	if (l==Nil) record
  if record==null l.head
  if (l.head<record) {
    record=l.head
  }
  min(l.tail)
}